--- a/service/pom.xml
+++ b/service/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>group-service</artifactId>
     <name>group-service</name>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>play2</packaging>
 
     <repositories>
