--- a/service/conf/application.conf
+++ b/service/conf/application.conf
@@ -40,7 +40,7 @@ akka {
 # ~~~~~
 # The secret key is used to sign Play's session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
-play.http.secret.key = "aunbirdGroup"
+play.http.secret.key = "sunbirdGroup2506202"
 
 ## Modules
 # https://www.playframework.com/documentation/latest/Modules
