--- a/pom.xml
+++ b/pom.xml
@@ -3,10 +3,10 @@
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.sunbird</groupId>
-    <artifactId>sunbird-groups</artifactId>
+    <artifactId>group-service</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>sunbird-groups</name>
+    <name>group-service</name>
     <properties>
         <project.version>1.0.0-SNAPSHOT</project.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -34,7 +34,7 @@
 
     <modules>
         <module>sb-utils</module>
-        <module>all-actors</module>
+        <module>group-actors</module>
         <module>sb-actor</module>
         <module>service</module>
         <module>cassandra-utils</module>
