--- a/service/conf/application.conf
+++ b/service/conf/application.conf
@@ -404,7 +404,7 @@ thisActorSystem {
             nr-of-instances = 1
             dispatcher = user-dispatcher
           }
-        /GroupActor
+        /CreateGroupActor
           {
             router = smallest-mailbox-pool
             nr-of-instances = 5
