--- a/service/pom.xml
+++ b/service/pom.xml
@@ -11,6 +11,7 @@
     <artifactId>service</artifactId>
     <name>play-service</name>
     <version>1.0.0</version>
+
     <packaging>play2</packaging>
 
     <repositories>
@@ -41,6 +42,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
         <!-- Add actor here itself to avoid netty jar conflict. -->
         <dependency>
             <groupId>com.typesafe.play</groupId>
@@ -51,11 +57,43 @@
             <groupId>org.sunbird</groupId>
             <artifactId>group-actors</artifactId>
             <version>${project.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.sunbird</groupId>
+            <artifactId>sb-utils</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.sunbird</groupId>
+            <artifactId>sb-telemetry-utils</artifactId>
+            <version>${project.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.typesafe</groupId>
             <artifactId>config</artifactId>
             <version>1.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.github.danielwegener</groupId>
+            <artifactId>logback-kafka-appender</artifactId>
+            <version>0.2.0-RC2</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.2.3</version>
         </dependency>
         <dependency>
             <groupId>com.typesafe.play</groupId>
@@ -92,6 +130,11 @@
             <artifactId>akka-testkit_${scala.major.version}</artifactId>
             <version>${akka.x.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+        <groupId>com.typesafe.play</groupId>
+        <artifactId>play-logback_2.11</artifactId>
+        <version>${play2.version}</version>
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
