Issue SH-389 add telemetry

--- a/service/conf/application.conf
+++ b/service/conf/application.conf
@@ -345,7 +345,7 @@ db {
 }
 play.filters.disabled += play.filters.csrf.CSRFFilter
 
-GroupActor {
+thisActorSystem {
   default-dispatcher {
     type = "Dispatcher"
     executor = "fork-join-executor"
