--- a/service/pom.xml
+++ b/service/pom.xml
@@ -8,8 +8,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>service</artifactId>
-    <name>play-service</name>
+    <artifactId>group-service</artifactId>
     <version>1.0.0</version>
     <packaging>play2</packaging>
 
