--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,6 @@
         <module>sb-actor</module>
         <module>service</module>
         <module>cassandra-utils</module>
+        <module>sb-telemetry-utils</module>
     </modules>
 </project>
