--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,16 @@
 version: 2.1
 jobs:
   build:
+    docker:
+      - image: circleci/openjdk:8-jdk
+    working_directory: ~/project
     steps:
       - checkout
       - restore_cache:
           key: groups-dependency-cache-{{ checksum "pom.xml" }}
-      - run: mvn clean install -U -DskipTests=true
-      - run: cd service && mvn play2:dist
+      - run:
+          name: Build the code
+          command: mvn clean install
       - save_cache:
           key: groups-dependency-cache-{{ checksum "pom.xml" }}
           paths: ~/.m2
