--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,10 +10,16 @@ jobs:
           key: groups-dependency-cache-{{ checksum "pom.xml" }}
       - run:
           name: Build the code
-          command: mvn clean install -U -DskipTests=true
+          command: mvn clean install
+      - run:
+          name: Save the build artifact
+          command: cd service && mvn play2:dist
       - save_cache:
           key: groups-dependency-cache-{{ checksum "pom.xml" }}
           paths: ~/.m2
+      - store_artifacts:
+          path: service/target/group-service-1.0.0-dist.zip
+          destination: /tmp/group-service.zip
 
 workflows:
   version: 2.1
