SH-387 Read Group API (#7)
* SH-387 Read Group API

* SH-387 Read Group API - Code review comments updated

--- a/service/conf/application.conf
+++ b/service/conf/application.conf
@@ -462,6 +462,12 @@ thisActorSystem {
             nr-of-instances = 5
             dispatcher = group-dispatcher
           }
+        /ReadGroupActor
+          {
+            router = smallest-mailbox-pool
+            nr-of-instances = 5
+            dispatcher = group-dispatcher
+          }
       }
     }
     remote {
