SH-390 Adding Search by User Id

--- a/group-actors/src/main/resources/cassandratablecolumn.properties
+++ b/group-actors/src/main/resources/cassandratablecolumn.properties
@@ -1,1 +1,9 @@
 id=id
+groupid=groupId
+userid=userId
+createdon=createdOn
+createdby=createdBy
+updatedon=updatedOn
+updatedby=updatedBy
+removedon=removedOn
+removedby=removedBy
