SH 388 Update Group API with member add/edit/delete (#20)
* SH-387 Read Group API

* SH-388 Update Group API

* SH-388 Merge issue fix

* SH-338 Code reviwew comment fix

* SH-388 Fixed merged conflicts

* SH-388 Resolving merge conflict

--- a/service/conf/application.conf
+++ b/service/conf/application.conf
@@ -474,6 +474,12 @@ thisActorSystem {
              nr-of-instances = 5
              dispatcher = group-dispatcher
            }
+        /UpdateGroupActor
+          {
+            router = smallest-mailbox-pool
+            nr-of-instances = 5
+            dispatcher = group-dispatcher
+          }
       }
     }
     remote {
