--- a/service/conf/responseMessages.properties
+++ b/service/conf/responseMessages.properties
@@ -6,3 +6,4 @@ MISSING_MANDATORY_PARAMS = MANDATORY PARAM {0} IS MISSING
 DATA_TYPE_ERROR = {0} PARAM SHOULD BE OF TYPE {1}
 EMPTY_MANDATORY_PARAM = value can not be empty for mandatory param {0}
 INVALID_PARAMETER_VALUE = Invalid value {0} for parameter {1}. Please provide a valid value.
+DB_UPDATE_FAIL = Db update operation failed.
