--- a/service/conf/application.conf
+++ b/service/conf/application.conf
@@ -99,7 +99,7 @@ play.http {
   ## Action Creator
   # https://www.playframework.com/documentation/latest/JavaActionCreator
   # ~~~~~
-  #actionCreator = null
+  actionCreator = utils.module.OnRequestHandler
 
   ## ErrorHandler
   # https://www.playframework.com/documentation/latest/JavaRouting
