SH-387 Read Api Url Fix

--- a/group-actors/src/main/resources/external.config.properties
+++ b/group-actors/src/main/resources/external.config.properties
@@ -1,1 +1,2 @@
-sunbird_user_service_search_url= http://localhost:9000/private/user/v1/search
+sunbird_user_service_search_url= http://localhost:9000
+sunbird_user_service_base_url= /private/user/v1/search
