SH-387 changing the env variables

--- a/group-actors/src/main/resources/external.config.properties
+++ b/group-actors/src/main/resources/external.config.properties
@@ -1,2 +1,1 @@
-sunbird_user_service_search_url= http://localhost:9000
-sunbird_user_service_base_url= /private/user/v1/search
+LEARNER_SERVICE_PORT= http://localhost:9000
