--- a/sb-utils/src/main/resources/externalresource.properties
+++ b/sb-utils/src/main/resources/externalresource.properties
@@ -5,3 +5,4 @@ sunbird_sso_url=
 sunbird_sso_realm=
 LEARNER_SERVICE_PORT= http://localhost:9000
 user_service_search_url=/private/user/v1/search
+sunbird_health_check_enable=true
