SH-622 Removing sunbird_auth env from properties file

--- a/sb-utils/src/main/resources/externalresource.properties
+++ b/sb-utils/src/main/resources/externalresource.properties
@@ -7,7 +7,7 @@ LEARNER_SERVICE_PORT=
 user_service_search_url=
 CONTENT_SERVICE_PORT=
 sunbird_cs_search_url=
-sunbird_authorization=test
+sunbird_authorization=
 
 
 
