SH-622 Integration with content-service (#32)
* SH-622 Integrating with Content-Service

--- a/sb-utils/src/main/resources/externalresource.properties
+++ b/sb-utils/src/main/resources/externalresource.properties
@@ -3,6 +3,9 @@ sunbird_sso_username=
 sunbird_sso_password=
 sunbird_sso_url=
 sunbird_sso_realm=
-LEARNER_SERVICE_PORT= http://localhost:9000
-user_service_search_url=/private/user/v1/search
+LEARNER_SERVICE_PORT=
+sunbird_user_service_search_url=
+CONTENT_SERVICE_PORT=
+sunbird_cs_search_url=
+sunbird_authorization=
 sunbird_health_check_enable=true
