SH-683: Setting Redis cache while readingGroup (#45)
* SH-683: setting redis cache

* SH-683: setting redis cache

* SH-683: added dependency platform cache

* SH-683: created cache actor

* SH-683: created cache actor

* SH-683: added pom version property for collection4

* SH-683: review changes

* SH-683: review changes

* SH-683: review changes

--- a/group-actors/pom.xml
+++ b/group-actors/pom.xml
@@ -17,7 +17,16 @@
             <artifactId>sb-actor</artifactId>
             <version>${project.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.sunbird</groupId>
+            <artifactId>platform-cache</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>${commons-collections4.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.sunbird</groupId>
             <artifactId>sb-utils</artifactId>
