--- a/service/conf/application.conf
+++ b/service/conf/application.conf
@@ -345,6 +345,11 @@ db {
 }
 play.filters.disabled += play.filters.csrf.CSRFFilter
 
+# Redis Configuration
+redis.host=${sunbird_redis_host}
+redis.port=${sunbird_redis_port}
+redis.maxConnections=${?sunbird_redis_maxConnections}
+
 thisActorSystem {
   default-dispatcher {
     type = "Dispatcher"
@@ -379,7 +384,7 @@ thisActorSystem {
     # Throughput for default Dispatcher, set to 1 for as fair as possible
     throughput = 1
   }
-  user-dispatcher {
+  health-dispatcher {
     type = "Dispatcher"
     executor = "fork-join-executor"
     fork-join-executor {
@@ -390,7 +395,7 @@ thisActorSystem {
       # Throughput for default Dispatcher, set to 1 for as fair as possible
       throughput = 1
   }
-  search-read-dispatcher {
+  group-dispatcher {
     type = "Dispatcher"
     executor = "fork-join-executor"
     fork-join-executor {
@@ -400,17 +405,6 @@ thisActorSystem {
     }
     # Throughput for default Dispatcher, set to 1 for as fair as possible
     throughput = 1
-  }
-  org-dispatcher {
-    type = "Dispatcher"
-    executor = "fork-join-executor"
-    fork-join-executor {
-        parallelism-min = 8
-        parallelism-factor = 32.0
-        parallelism-max = 64
-    }
-      # Throughput for default Dispatcher, set to 1 for as fair as possible
-      throughput = 1
   }
 
   akka {
@@ -454,7 +448,7 @@ thisActorSystem {
           {
             router = smallest-mailbox-pool
             nr-of-instances = 5
-            dispatcher = user-dispatcher
+            dispatcher = health-dispatcher
           }
         /CreateGroupActor
           {
@@ -465,21 +459,26 @@ thisActorSystem {
         /ReadGroupActor
           {
             router = smallest-mailbox-pool
-            nr-of-instances = 5
+            nr-of-instances = 15
             dispatcher = group-dispatcher
           }
           /SearchGroupActor
            {
              router = smallest-mailbox-pool
-             nr-of-instances = 5
+             nr-of-instances = 10
              dispatcher = group-dispatcher
            }
         /UpdateGroupActor
           {
             router = smallest-mailbox-pool
-            nr-of-instances = 5
+            nr-of-instances = 10
             dispatcher = group-dispatcher
           }
+        /CacheActor{
+          router = smallest-mailbox-pool
+          nr-of-instances = 15
+          dispatcher = group-dispatcher
+        }
       }
     }
     remote {
