SH-561 Adding custod org details

--- a/group-actors/pom.xml
+++ b/group-actors/pom.xml
@@ -17,7 +17,17 @@
             <artifactId>sb-actor</artifactId>
             <version>${project.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.sunbird</groupId>
+            <artifactId>sb-telemetry-utils</artifactId>
+            <version>${project.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <dependency>
             <groupId>org.sunbird</groupId>
             <artifactId>sb-utils</artifactId>
