--- a/setVars.sh.sample
+++ b/setVars.sh.sample
@@ -24,5 +24,7 @@
 #sunbird_us_org_read_url=''
 #sunbird_cs_search_url=''
 #admin util keys must be injected
-
+#telemetry_pdata_id=''
+#telemetry_pdata_pid=''
+#telemetry_pdata_ver=''
 ################### END - GROUPS_SERVICE configuration #############################
