--- a/sb-utils/src/main/resources/externalresource.properties
+++ b/sb-utils/src/main/resources/externalresource.properties
@@ -14,3 +14,5 @@ sunbird_us_org_read_url=/v1/org/read
 enable_userid_redis_cache=true
 groups_redis_ttl=86400
 user_redis_ttl=3600
+max_group_members_limit =150
+max_activity_limit=20
