--- a/service/conf/responseMessages.properties
+++ b/service/conf/responseMessages.properties
@@ -8,3 +8,4 @@ EMPTY_MANDATORY_PARAM = value can not be empty for mandatory param {0}
 INVALID_PARAMETER_VALUE = Invalid value {0} for parameter {1}. Please provide a valid value.
 DB_UPDATE_FAIL = Db update operation failed.
 GROUP_NOT_FOUND=group does not exist with this group Id {0}.
+DB_INSERTION_FAIL=DB insert operation failed.
