SB-20877 Ading function to suspend the group by admin

--- a/service/conf/responseMessages.properties
+++ b/service/conf/responseMessages.properties
@@ -9,3 +9,4 @@ INVALID_PARAMETER_VALUE = Invalid value {0} for parameter {1}. Please provide a 
 DB_UPDATE_FAIL = Db update operation failed.
 GROUP_NOT_FOUND=group does not exist with this group Id {0}.
 DB_INSERTION_FAIL=DB insert operation failed.
+GROUP_NOT_ACTIVE=group does not active with this group Id {0}.
