--- a/service/conf/application.conf
+++ b/service/conf/application.conf
@@ -3,7 +3,7 @@
 # ~~~~~
 # Play uses HOCON as its configuration file format.  HOCON has a number
 # of advantages over other config formats, but there are two things that
-# can be used when modifyin g settings.
+# can be used when modifying settings.
 #
 # You can include other configuration files in this main application.conf file:
 #include "extra-config.conf"
@@ -12,7 +12,7 @@
 #mykey = ${some.value}
 #
 # And if an environment variable exists when there is no other subsitution, then
-# HOCON will fall back to `substituting environment variable:
+# HOCON will fall back to substituting environment variable:
 #mykey = ${JAVA_HOME}
 
 ## Akka
