SC-2059 New membership update api (#87)
* SC-2059 Adding new membership update api

--- a/service/conf/application.conf
+++ b/service/conf/application.conf
@@ -480,6 +480,12 @@ thisActorSystem {
             nr-of-instances = 10
             dispatcher = group-dispatcher
           }
+         /UpdateGroupMembershipActor
+         {
+            router = smallest-mailbox-pool
+            nr-of-instances = 10
+            dispatcher = group-dispatcher
+         }
         /CacheActor{
           router = smallest-mailbox-pool
           nr-of-instances = 15
