--- a/service/conf/application.conf
+++ b/service/conf/application.conf
@@ -474,6 +474,18 @@ thisActorSystem {
             nr-of-instances = 10
             dispatcher = group-dispatcher
           }
+          /DeleteGroupActor
+          {
+            router = smallest-mailbox-pool
+            nr-of-instances = 10
+            dispatcher = group-dispatcher
+          }
+         /UpdateGroupMembershipActor
+         {
+            router = smallest-mailbox-pool
+            nr-of-instances = 10
+            dispatcher = group-dispatcher
+         }
         /CacheActor{
           router = smallest-mailbox-pool
           nr-of-instances = 15
