--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,8 @@
 version: 2.1
 jobs:
   build:
-    docker:
-      - image: circleci/openjdk:8-jdk
-        environment:
-          commit_hash: "${CIRCLE_SHA1}"
-    working_directory: ~/project
+    machine:
+       - image: ubuntu-2004:202008-01
     steps:
       - checkout
       - restore_cache:
