SB-change config

--- a/service/conf/application.conf
+++ b/service/conf/application.conf
@@ -34,6 +34,9 @@ play.i18n {
   # The application languages
   langs = [ "en" ]
 }
+
+play.http.secret.key = "sunbirdGroup2506202"
+
 ## Play HTTP settings
 # ~~~~~
 ## Play HTTP settings
