--- a/service/pom.xml
+++ b/service/pom.xml
@@ -36,12 +36,25 @@
     <dependencies>
         <!-- Don't move this dependency below play dependency otherwise it will
             be overriden by play jackson jar, which uses older version -->
+
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson.version}</version>
         </dependency>
         <!-- Add actor here itself to avoid netty jar conflict. -->
+        <dependency>
+            <groupId>com.typesafe.play</groupId>
+            <artifactId>play-netty-server_2.11</artifactId>
+            <version>2.7.2</version>
+            <scope>runtime</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.scala-lang</groupId>
+                    <artifactId>scala-library</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
         <dependency>
             <groupId>com.typesafe.play</groupId>
             <artifactId>play-guice_${scala.major.version}</artifactId>
