--- a/service/conf/application.conf
+++ b/service/conf/application.conf
@@ -212,8 +212,8 @@ thisActorSystem {
         java = "akka.serialization.JavaSerializer"
       }
       serialization-bindings {
-        "org.sunbird.request.Request" = java
-        "org.sunbird.response.Response" = java
+        "org.sunbird.common.request.Request" = java
+        "org.sunbird.common.response.Response" = java
       }
       akka.actor.allow-java-serialization = off
       debug {
